lab1/Test/L1-A-8-87.cmm
float ;
< int ;[ 
struct y2EWAx1J5q {
  struct WqmzqSyfxUr0cGdbB_0t yWVrUqsAcHr ;
}l6O_ , W2 

;
struct {
  struct skcO8vZnNx9Apz tFZIHfO9JbsodfG6 , O , bzM 
    , QJGZYLL8ltT , bRnsXp9B [ 924261539 ] = GVw = r && 
    wB6o3G3cr1of2H5Ki > NPgYInGI + - ! jvUSSn6axO7Zfa01j_ 
    [ f95yEptkT9CCdeXj9vvu = QWihWOM || Sm4zUvBpoYzyVdo8MMN 
    < GMd - anAUmsLbEyVYU / ! bZw ( yZDqk = AH05jqPI <= 
    qZsfT + ! - - ! ( iyYA_PY1qZYwsCEqm01n == ! ( Tkl68_WOy0Oagm 
    = qetvpGwDE_2Sf = okTy9XdpW37QBv0VN - gb * - lD5gU3UygG91t25oo9gL 
    [ tDs = c98B + lW3SCjvU [ _w1qnmxO8 && ! ( kz53n7Ggm4ucR026Xj 
    || rgNZ3t7f8u2 > UxRrX3DJcSDfX_ + k6NYo2gRAsbhm / 
    ( Y9Q37fw || J3bsTkCjLkuHK80U22 < ! - ( kSkO1cgn07E 
    && tYpjp < ! ( - nkbyBPj9H60RxjayB ( loMMI6 , GglbLkMVPC7Jo 
    ) ) ) . FOhvsBHyyXSCE . VJtSJ8wxT1E / bHTji9E7MtI1 
    ) >= - - BHH ) . rEanMV9KbxvE78 . ESB . HvYpjbLDPrUf7_wfb 
    ] >= AoMD3y0PsH ] ) / - ZS4S9MOqq40AZo5qsrKw / ! 1910670102.2026148499 
    / 631981424 ) != hnGnP * - ! A2p_Ij9x9ch71rOp ( ) 
    ) . BMryk3HmrW ] == ;
  int KrroVaUbu ;
!= }M1 ( ) {
}
int HYMcs ( int Kv6trHL ) {
  while ( g ) {
    vWHoTvKnAECkzkd ;
    if ( f7Qc4 )     if ( OlCoSspy21 )     BfV2B1GfMixngX5pJavn 
      ;
else     return uvTYf3 ;

else     if ( uHLiMz4 )     l05JvWUFX3sqYazLmxyY ;


  }
}
int S ( ) {
}
int ;
int j1DYwZ0TmI7wqDgG0dbR ( int z8 , int Ea float ) 
  {
}
